@@ -1,7 +1,8 @@
 
-R version 2.11.0 (2010-04-22)
-Copyright (C) 2010 The R Foundation for Statistical Computing
+R version 2.14.0 (2011-10-31)
+Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
+Platform: i686-pc-linux-gnu (32-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -21,7 +22,7 @@ Type 'q()' to quit R.
 > library(survival)
 Loading required package: splines
 > 
-> options(na.action=na.exclude) # preserve missings
+> options(na.action="na.exclude") # preserve missings
 > options(contrasts=c('contr.treatment', 'contr.poly')) #ensure constrast type
 > aeq <- function(x,y, ...) all.equal(as.vector(x), as.vector(y), ...)
 > 
