@@ -23,3 +23,4 @@ all.equal(p2, p1[c(2:4, 6:8)], check.attributes=FALSE)
 fit3 <- survreg(Surv(time, status) ~ factor(ph.ecog) + age, lung)
 tdata <- data.frame(ph.ecog=factor(0:3), age=50)
 predict(fit, type='lp', newdata=tdata)
+predict(fit3, type='lp', newdata=tdata)
